# daqapp2

./: .gitignore  Cargo.toml  can_emulator.py  colors.toml  formatter_config.json  nord.toml
.github/workflows/: ci.yaml
hil_config/: presets.json  schema.json
hil_config/tests/: heartbeats_crit.json  heartbeats_non_crit.json  idk.json
nix_flake/: flake.nix
src/: action.rs  app.rs  assets.rs  bootloader.rs  can_viewer.rs  config.rs  connection.rs  formatter.rs  frozen.rs  live_plot.rs  log_parser.rs  main.rs  messages.rs  scope.rs  settings.rs  shortcuts.rs  sidebar.rs  theme.rs  util.rs  widgets.rs  workspace.rs
src/can/: bus_load.rs  can_messages.rs  daq_logger.rs  driver.rs  message.rs  mod.rs  serial.rs  state.rs  thread.rs  thread_tests.rs  udp.rs
src/daq_log_parse/: consts.rs  correlate.rs  mod.rs  parse.rs  table.rs
src/hil/: config.rs  run.rs
src/logs/: consts.rs  parse.rs  table.rs
src/send/: messages.rs  mod.rs  thread.rs
src/ui/: battery.rs  battery_temps.rs  bootloader.rs  bus_load.rs  can_viewer.rs  charge_controller.rs  command_palette.rs  dbc_msg_picker.rs  dynamics.rs  gg_plot.rs  hil.rs  jitter.rs  log_parser.rs  mod.rs  scope.rs  send.rs  sidebar.rs  theme.rs  ui_messages.rs  viewer_list.rs  viewer_table.rs
src/ui/battery/: battery_temps.rs  battery_voltage.rs  common.rs  mod.rs
themes/: catppuccin.toml  nord.toml  onedark.toml
