[package]
name = "daqapp-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.0"
egui_tiles = "0.14.0"
egui_plot = "0.34.0"
egui_extras = "0.33.0"
rfd = "0.15.4"
# can_decode = "0.4.0"
can_decode = { git = "https://github.com/PurdueElectricRacing/can_decode", branch = "millan/ordered_decode" }
can-dbc = "6.0.0"
chrono = "0.4"
hashbrown = "0.16.0"

log = "0.4.29"
env_logger = "0.11.8"

slcan = { git = "https://github.com/LelsersLasers/slcan", features = ["sync"] }
serialport = "4.8.1"
rand = "0.9.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
