[package]
name = "daqapp-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui_tiles = "0.14.1"
egui_plot = "0.34.1"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }

rfd = "0.17.2"

can_decode = "0.7.2"
can-dbc = "9.0.0"

globset = "0.4.18"

chrono = "0.4.44"

hashbrown = "0.16.1"

log = "0.4.29"
env_logger = "0.11.10"

slcan = { git = "https://github.com/LelsersLasers/slcan", features = ["sync"] }
serialport = "4.8.1"

rand = "0.10.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
bytemuck = "1.25.0"
csv = "1.4.0"
